--- a/SAMT-Website/Pages/Whenwhere.razor
+++ b/SAMT-Website/Pages/Whenwhere.razor
@@ -70,12 +70,16 @@
                             <p class="text-muted card-text mb-4">Fahr mit dem Zug bis <strong>Siegen HBF</strong>.<br>Nutze hierfür am besten Apps wie z.B. den&nbsp;<a href="https://www.bahn.de/service/mobile/db-navigator" target="_blank">DB Navigator</a>.<br><br><strong>Als kurze Übersicht aus Richtung:</strong></p>
                             <ul class="text-start">
                                 <li>Köln: RE 9</li>
-                                <li>Hagen: RE16/RB91</li>
-                                <li>Dortmund: RE34/IC</li>
+                                <li>Hagen: RE 16/RB 91</li>
+                                <li>Dortmund: RE 34/IC</li>
                                 <li>Frankfurt: RE 99/IC</li>
                                 <li>Erndtebrück: Bus R27/RB 93/ RB 94</li>
                             </ul>
-                            <p class="text-muted card-text mb-4">Vom Bahnhof sind es noch ca. 8 Minuten (650 Meter) zu Fuß bis zur <strong>BlueBox Siegen</strong>.</p><a class="btn btn-primary btn-sm" role="button" href="assets/img/Wegbeschreibung_Bahnhof_BlueBox.jpeg" target="_blank">Karte Fußweg</a>
+                            @if (samt is not null)
+                            {
+                                <p class="text-muted card-text mb-4">Vom Bahnhof sind es noch ca. 8 Minuten (650 Meter) zu Fuß bis zur <strong>@samt.FkLocation.Name</strong>.</p>
+                                <a class="btn btn-primary btn-sm" role="button" href="assets/img/Wegbeschreibung_Bahnhof_BlueBox.jpeg" target="_blank">Karte Fußweg</a>
+                            }
                         </div>
                     </div>
                 </div>
